Wed Jul 16 13:39:51 CDT 2003  sor1.3.5 - Mysidia
 * Bugfix [channel.c] rule-based bans, ban list could prevously be truncated 
   during net.merge; this change allows spaces in bans to work properly
 * Don't allow \033, \037, \026, \017, \b, \t, \003, \002, \001, or \240
   in channel names
 * New ircd configuration line: W-line, enhanced K-line for banning by information 
   supplied in the User line, usage:
       W:[host]:[reason]:[nickname]:[username]:[sup user]:[sup server]:[real name]
           ^        ^      ^           ^         ^           ^           ^
          host   passwd   name       string4     string5     string6    string7

   For example:
       W::Blah blah:::::Forbidden Realname
       
 * Changes to the akill command to reduce CPU usage [Skandranon]

Sat Mar 15 17:53:03 PST 2003 - Mysidia - sor1.3.4_2
	* Reduced false positives in version check, for ircle
	  and clients that don't like CTCP before completion
	  of user logon process.

Fri Jan 24 20:05:48 CST 2003 - Mysidia - sor1.3.4
	* Onno's modifications to client connect notices
	  and f/c flags
	* Allow ahurt users to use /who 0 o just like
	  users hurt for socks detected can do

Sat Aug  7 18:42:34 CDT 2001 - Mysidia - sor1.3.3-p1
       * Backporting some features from sor1.4:
          * Safe /list to help stop sendQ exceeds/dead sockets
          * List options features (from dreamforge)
          * +H channel mode to block +m users (/join unmask)
          * Hiding of the keys in +k mode resets from non-ops to help
            protect key security (ChanServ MLOCK)
          * Ban caching for channel members to reduce the CPU cost of 
            BQUIET
          * Prevent a user from switching to a nickname banned
            on a channel, block nick changes while moderated
          * Shortcut for /msg service@services.sorcery.net,
            /msg service@ or /msg service@services
          * +c channel mode to block colors
          * Fixed many holes in the ip masking scheme
