@@ -45,7 +45,8 @@ BLOCKING=''
 SN_MODE='1'
 NETNAME='SorceryNet'
 URL_CONNECTHELP='none'
-NO_VERSION_CHECK='Yes'
+NO_VERSION_CHECK='1'
+REQ_VERSION_RESPONSE='1'
 EXEC=/tmp/.Configtmp$$
 PLATE=/tmp/.ConPlate$$
 c=''
@@ -1462,8 +1463,7 @@ NO_VERSION_CHECK
 ONLY from clients not responding to the NOSPOOF message properly.
 
 If this option is set to NO, then every client logging on will be
-polled for version information, and any client that fails to reply
-will not be allowed access to IRC.
+polled for version information.
 EOF
 
          echo $n "[$FOO] -> $c"
@@ -1491,6 +1491,61 @@ EOF
                     ;;
                     esac
 done	  
+
+if [ -z "$NO_VERSION_CHECK" ] ; then
+FOO=''
+runonce=''
+while [ -z "$FOO" ] ; do
+   FOO="$REQ_VERSION_RESPONSE"
+          if [ -n "$REQ_VERSION_RESPONSE" ] ; then
+               FOO="Yes"
+          else
+               FOO="No"
+          fi
+
+cat << EOF
+REQ_VERSION_RESPONSE
+
+If this option is enabled, then all clients MUST provide a response
+to the CTCP VERSION check in order to connect to IRC.
+
+Clients that do not respond to the CTCP version request will be treated
+similarly to AHURT clients and will be disconnected within 5 minutes.
+
+Do you wish to enable this option?
+
+EOF
+         echo $n "[$FOO] -> $c"
+         if [ -z "$AUTO_CONFIG" -o -n "$runonce" ] ; then
+               read cc
+               runonce=Yes
+         else
+               cc=""
+         fi
+
+         if [ -z "$cc" ] ; then
+             cc=$FOO
+         fi
+
+         case "$cc" in
+                    [Yy]*)
+                        REQ_VERSION_RESPONSE="1"
+                    ;;
+                    [Nn]*)
+                        REQ_VERSION_RESPONSE=""
+                    ;;
+                    *)
+                        echo "You need to enter either Yes or No here..."
+                        FOO=""
+                    ;;
+         esac
+
+ done
+
+else
+	REQ_VERSION_RESPONSE=''
+fi
+
 
 # this matches a NOSPOOF check waaaaaay up there
 fi
@@ -2103,6 +2158,10 @@ if [ -n "$NO_VERSION_CHECK" ] ; then
     echo "#define NO_VERSION_CHECK 1"  >> $OPTIONS_H
 fi
 
+if [ -n "$REQ_VERSION_RESPONSE" ] ; then
+    echo "#define REQ_VERSION_RESPONSE 1" >> $OPTIONS_H	
+fi
+
 if [ -n "$CRYPT_LINK_PASSWORD" ] ; then
     echo "#define CRYPT_LINK_PASSWORD 1" >> $OPTIONS_H
 else
@@ -2158,6 +2217,7 @@ NOSPOOF_SEED02="$NOSPOOF_SEED02"
 IMODE="$IMODE"
 ENABLE_SOCKSCHECK="$ENABLE_SOCKSCHECK"
 NO_VERSION_CHECK="$NO_VERSION_CHECK"
+REQ_VERSION_RESPONSE="$REQ_VERSION_RESPONSE"
 NS_ADDRESS="$NS_ADDRESS"
 KLINE_ADDRESS="$KLINE_ADDRESS"
 NETWORK_KLINE_ADDRESS="$NETWORK_KLINE_ADDRESS"
