@@ -22,6 +22,7 @@
 
 extern aChannel *hash_get_chan_bucket(int);
 
+#define STRINGHASHSIZE 500
 
 #define WATCHHASHSIZE 300
 
