@@ -1,7 +1,7 @@
 #
 # DO NOT EDIT THIS FILE MANUALLY
 # This file was created by user root with helpdigest 
-# (./helpdigest) on Wed Jul 30 17:11:06 CDT 2003
+# (./helpdigest) on Wed Jul 30 19:06:42 CDT 2003
 # Present Working directory was /usr/src/sv/ircd_p
 # 
 # Files: 
